Fix styling for slideshow on mobile

--- a/src/Slide.css
+++ b/src/Slide.css
@@ -6,11 +6,15 @@
   right: 2vw;
   top: 40%;
   position: fixed;
-  font-size: 40px;
+  font-size: 4vw;
 }
 
 .right-button:hover {
   transform: scale(1.2);
+}
+
+.carousel .slide {
+  min-height: 70%;
 }
 
 
@@ -20,6 +24,7 @@
 
 .carousel img {
     object-fit: contain;
+    /*this is how I got the images to not resize in the slides */
 }
 
 .left-button {
@@ -27,10 +32,10 @@
   height: 50px;
   background-color: transparent;
   border-style: none;
-  left: 2vw;
+  left: 0vw;
   top: 40%;
   position: fixed;
-  font-size: 40px;
+  font-size: 4vw;
   z-index: 20;
 }
 
